--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ html {
 }
 header{
     background-color: black;
+    background-image: url(imagens/imagem-pizza.png);
+    background-attachment:scroll;
+    background-position: center;
+    background-size: cover;
     width: auto;
     min-height: auto;
     margin:-9px -8px -30px ;
@@ -18,13 +22,26 @@ header{
     box-shadow:1px 0px 4px 0px black;
     
 }
+.delivery {
+    background-color: rgb(238, 0, 0);
+    width: auto;
+    margin:-9px -8px -30px ;
+    padding: 9px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+}
+.delivery > p{
+    text-align: left;
+
+}
 .logo{
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     background-color: white;
-    margin: auto;
-    padding: 10px;
+    margin: 34px auto ;
+    padding: 50px;
     background-image: url(imagens/favicon.ico);
 
 
@@ -52,7 +69,7 @@ nav > a:hover{
     text-decoration:none;
 }
 main{
-    background-color: white;
+    background-color: rgb(0, 0, 0);
     border-radius: 0px 0px 24px 24px ;
     min-width:320px;
     max-width: 947px;
@@ -60,28 +77,30 @@ main{
 }
 body{
     background-color:white;
-    background-image: url(imagens/imagem-pizza.png);
-    background-position: center center;
-    background-attachment: scroll;
+    
     color: white;
 }
 footer{
-    background-color: rgba(0, 0, 0, 0.29);
-    height: auto;
+    background-color: rgba(0, 0, 0, 0.403);
+    background-image:url(imagens/269.jpg);
     margin: auto;
-    height: 360px
+    height: 360px;
+    background-position: center;
+    background-size: cover;
+    background-attachment: scroll;
     
 }
 .mapa{
-    display: flex;
-    justify-content: right;
+    height: 100%;
+    width: 100%;
+    
 }
 header p{
     text-align:center;
 }
 .mapa > iframe{
-    width: 1100px;
-    height: 300px;
+    height: auto;
+   
 }
 
 p{
@@ -127,7 +146,10 @@ ul > li{
     color: black;
 }
 .container2{
-    background-color: rgba(0, 0, 0, 0.399);
+    background-color: rgba(255, 255, 255, 0.399);
+    background-image: url(imagens/v642-nap-26-fastfood.jpg);
+    background-position: center;
+    background-size: cover;
     height:300px;
     display: flex;
     justify-content: space-evenly;
@@ -144,10 +166,13 @@ ul > li{
     
     
 }
-.descrição-promo{
-    
+.descrição-promo {
+    color: black;
     width: 300px;
     text-align: center;
+}
+.descrição-promo > p{
+    color: black;
 }
 
 
