--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ main{
     margin: 30px auto;
 }
 body{
-    background-color:white;
+    background-color:rgb(237, 194, 94);
     
     color: white;
 }
