--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header{
     
 }
 .delivery {
-    background-color: rgb(238, 0, 0);
+    background-color:#c32105;
     width: auto;
     margin:-9px -8px -30px ;
     padding: 9px;
@@ -31,9 +31,10 @@ header{
     display: flex;
     align-items: center;
 }
-.delivery > p{
+.delivery > p,a{
     text-align: left;
-
+    text-decoration: none;
+    color: aliceblue;
 }
 .logo{
     width: 100px;
@@ -69,14 +70,15 @@ nav > a:hover{
     text-decoration:none;
 }
 main{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     border-radius: 0px 0px 24px 24px ;
     min-width:320px;
     max-width: 947px;
     margin: 30px auto;
 }
+
 body{
-    background-color:rgb(237, 194, 94);
+    background-color:#eadac0;
     
     color: white;
 }
@@ -146,14 +148,18 @@ ul > li{
     color: black;
 }
 .container2{
-    background-color: rgba(255, 255, 255, 0.399);
-    background-image: url(imagens/v642-nap-26-fastfood.jpg);
-    background-position: center;
-    background-size: cover;
+    background-color:#807e2a;
     height:300px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+.container3{
+    background-color: #770005;
+}
+h1,p{
+    text-align: center;
+    text-align: center;
 }
 .grid{
     width: 300px;
