--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 @charset "UTF-8";
-  @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100&display=swap');
 *{
-    font-family:"barlow";
-
     font-weight: normal;
     font-style: normal;
 }
@@ -180,5 +177,49 @@ h1,p{
 .descrição-promo > p{
     color: black;
 }
-
+.divcard{
+    display: flex;
+    justify-content: space-around;   
+}
+.card{
+    background-color:rgb(255, 255, 255) ;
+    margin-bottom: 13px;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8.18px;
+    border-radius: 5px;
+    box-shadow: 0px 1px 6px black;
+    width: 180px;
+    height: 250px;
+transition: 1.2s;}
+.card >img{
+    width: 100%;
+    height: 130px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    
+}
+.card >h1{
+    margin:0;
+    font-size: .9em;
+}
+.card >p{
+    font-size: 0.5em;
+    color: black;
+}
+a> button{
+    background-color: #eadac0;;
+    font-size: 0.5em;
+    width: 100px;
+    height: 30px;
+    border: none;
+    border-radius: 2px;
+    padding: 5px;
+    cursor: pointer;
+}
+.card:hover{
+    transform:scale3d(1.1,1.1,1);    
+}
 
