--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
+
 *{
     font-weight: normal;
-
 }
 html {
     scroll-behavior: smooth;
@@ -82,10 +82,13 @@ main{
     justify-content:center;
     border-radius:0px 0px 23px 23px ;
     
+
+    
 }
 .chamada1>p{
     font-size: larger;
     margin: 0;
+
 }
 .chamada1{
     width: 512px;
@@ -93,22 +96,22 @@ main{
     padding-top: 2px;
 }
 .botão{
-    background-color: #eadac0;;
+    background-color: #000000;;
     font-size:13px;
     text-transform: uppercase;
     width: 163px;
     height: 34px;
     border: none;
-    border-radius: 2px;
+    border-radius: 4px;
     padding: 5px;
     cursor: pointer;
     margin: auto;
     margin-top: 5px; 
     transition: 1.2s;
 }
-.botão>p{
+.botão > p{
     text-align: center;
-    color: black;
+    color: rgb(0, 0, 0);
     margin: 0;
 }
 .botão:hover{
@@ -146,15 +149,19 @@ header p{
     height: auto;
    
 }
-
+.bem-vidos> p {
+    font-size: 23px;
+}
 p{
     color: white;
+}
+h1{
+    font-size: 30px;
 }
 h2{
     text-align: center;
     color: white;
 }
-
 .container{
     display:flex;
     
@@ -178,6 +185,7 @@ ul{
 }
 ul > li{
     text-align: center;
+    font-size: 12px;
     color: white;
 }
 .endereco{
@@ -206,7 +214,6 @@ ul > li{
 }
 h1,p{
     text-align: center;
-    text-align: center;
 }
 .grid{
     width: 300px;
@@ -225,7 +232,7 @@ h1,p{
     text-align: center;
 }
 .descrição-promo > p{
-    color: black;
+    color: white;
 }
 .divcard{
     display: flex;
